add smooth scrolling page

--- a/index.html
+++ b/index.html
@@ -7,21 +7,15 @@
 
     <!-- slider bx -->
     <link href="js/jquery.bxslider.css" rel="stylesheet">
-    <!-- slider bx finish -->
 
-    <!-- <script src="js/mafusail.js"></script>
-    <script src="js/riss.js"></script>
-    <script src="js/max.js."></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
-    <title>Project2</title>
+    <title>Like studion | WEB  Company</title>
 </head>
 
 <body>
 <header>
-    <section class="block_1">
-
-
+    <section class="block_1" id="box1_a">
         <div class="bg1">
             <div class="text_na_bg1">
                 <h1>BU Dev Studio</h1>
@@ -33,125 +27,125 @@
         <div class="fullwrap_a">
             <input id="btn_menu_a" type="checkbox">
             <label for="btn_menu_a"><img src="img/menu_respon.png" alt="menu"></label>
-            <nav class="navigation_a">
+            <nav id="navigation_a">
                 <ul class="menu_a">
-                    <li class="tabs_menu_a"><a href="#">BU Dev Studio</a></li>
-                    <li class="tabs_menu_a"><a href="#">Интернатура</a></li>
-                    <li class="tabs_menu_a"><a href="#">Технологии</a></li>
-                    <li class="tabs_menu_a"><a href="#">Портфолио</a></li>
-                    <li class="tabs_menu_a"><a href="#">Контакты</a></li>
+                    <li class="tabs_menu_a"><a href="#box1_a">BU Dev Studio</a></li>
+                    <li class="tabs_menu_a"><a href="#box2_a">Интернатура</a></li>
+                    <li class="tabs_menu_a"><a href="#box3_a">Технологии</a></li>
+                    <li class="tabs_menu_a"><a href="#box4_a">Портфолио</a></li>
+                    <li class="tabs_menu_a"><a href="#box5_a">Контакты</a></li>
                 </ul>
             </nav>
         </div>
     </section>
 </header>
 
+<div id="main_a">
+    <section class="block_2" >
+        <img src="img/meeting-coffee-laptops-1940x900_36390.jpg" alt="img in text">
+        <p>
+            BIONIC University в рамках развития концепции практического обучения запустил собственный проект по разратке програмного обеспечения - BU Dev Studio. Участники проекта работают над продуктом в команде под руководством опытных ти-лидов, таким образом, изучая на практике весь цыкл разработке проекта.
+            <br>
+            Участники а проектах предлагает наличие у кандидатов высокого уровня подготовки и будет только выпусникам BIONIC School. Срок разработки бизнес-решения: 12-15 недель. Команды работают по методологии управления проектами Scrum или Iterative Waterfall. Это вовлекает команду в активное взаимодествие с заказчиком: демо, релизы, обратная связь. Разработка программного продукта в BU Dev Studio дает практический опыт работы над реальными бизнес-задачами.
+        </p>
+    </section>
 
-<section class="block_2">
-    <img src="img/meeting-coffee-laptops-1940x900_36390.jpg" alt="img in text">
-    <p>
-        BIONIC University в рамках развития концепции практического обучения запустил собственный проект по разратке програмного обеспечения - BU Dev Studio. Участники проекта работают над продуктом в команде под руководством опытных ти-лидов, таким образом, изучая на практике весь цыкл разработке проекта.
-        <br>
-        Участники а проектах предлагает наличие у кандидатов высокого уровня подготовки и будет только выпусникам BIONIC School. Срок разработки бизнес-решения: 12-15 недель. Команды работают по методологии управления проектами Scrum или Iterative Waterfall. Это вовлекает команду в активное взаимодествие с заказчиком: демо, релизы, обратная связь. Разработка программного продукта в BU Dev Studio дает практический опыт работы над реальными бизнес-задачами.
-    </p>
-</section>
-
-<section class="block_3">
-    <div class="txt">
-        <h1 class="int">
-            Интeрнатура в BU Dev Studio - это возможность получить ценный опыт и первый реальный проект в портфолио.
-        </h1>
-        <div class="info">
-            <img class="gal" src="img/gal.png" alt="">
-            <div class="txt2">&#9884; Взаимодействие в команде</div>
-            <div class="txt2">&#9884; Первый реальный проект</div>
-        </div>
-        <div class="info">
-            <img class="gal" src="img/gal.png" alt="">
-            <div class="txt2">&#9884; Первый реальный проект </div>
-            <div class="txt2">&#9884; Взаимодействие в команде</div>
-        </div>
-        <div class="info">
-            <img class="gal" src="img/gal.png" alt="">
-            <div class="txt2">&#9884; Взаимодействие в команде</div>
-            <div class="txt2">&#9884; Первый реальный проект</div>
-        </div>
-    </div>
-</section>
-
-
-<section class="block_4">
-    <div class="wrapper">
-        <div class="tabs">
-            <span class="tab">Java</span>
-            <span class="tab">ASP.NET</span>
-            <span class="tab">PHP</span>
-            <span class="tab">Front END</span>
-            <span class="tab">QA+BA</span>
-        </div>
-        <div class="tab_content">
-            <div class="tab_item">
-                <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
-                <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
-                <div class="clearfix"></div>
+    <section class="block_3" id="box2_a">
+        <div class="txt">
+            <h1 class="int">
+                Интeрнатура в BU Dev Studio - это возможность получить ценный опыт и первый реальный проект в портфолио.
+            </h1>
+            <div class="info">
+                <img class="gal" src="img/gal.png" alt="">
+                <div class="txt2">&#9884; Взаимодействие в команде</div>
+                <div class="txt2">&#9884; Первый реальный проект</div>
             </div>
-            <div class="tab_item">
-                <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
-                <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
-                <div class="clearfix"></div>
+            <div class="info">
+                <img class="gal" src="img/gal.png" alt="">
+                <div class="txt2">&#9884; Первый реальный проект </div>
+                <div class="txt2">&#9884; Взаимодействие в команде</div>
             </div>
-            <div class="tab_item">
-                <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
-                <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
-                <div class="clearfix"></div>
-            </div>
-            <div class="tab_item">
-                <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
-                <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
-                <div class="clearfix"></div>
-            </div>
-            <div class="tab_item">
-                <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
-                <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
-                <div class="clearfix"></div>
+            <div class="info">
+                <img class="gal" src="img/gal.png" alt="">
+                <div class="txt2">&#9884; Взаимодействие в команде</div>
+                <div class="txt2">&#9884; Первый реальный проект</div>
             </div>
         </div>
-    </div>
-</section>
-<!-- slider -->
-<section class="block_5">
-    <div class="slider2">
-        <div class="slide"><img src="img/slide1.jpg"></div>
-        <div class="slide"><img src="img/slide2.jpg"></div>
-        <div class="slide"><img src="img/slide3.jpg"></div>
-    </div>
+    </section>
 
-</section>
 
-<section class="block_6">
-    <div class="contact">
-        <h5>Хочешь в интернатуру?</h5>
-        <p class="conntact_p">Пиши нам!</p>
-        <div class="form_contact">
-            <form id="loginform" action="" method="post">
-                <p>
-                    <input type="text" name="name" placeholder="ИМЯ"/>
-                </p>
-                <p>
-                    <input type="email" name="mail" placeholder="E-MAIL"/>
-                </p>
-                <p>
-                    <input type="tel" name="telephon" placeholder="НОМЕР ТЕЛЕФОНА" >
-                </p>
-                <p>
-                    <input class="form_bottom" type="submit" name="enter" value="Отправить" />
-                </p>
-            </form>
+    <section class="block_4" id="box3_a">
+        <div class="wrapper">
+            <div class="tabs">
+                <span class="tab">Java</span>
+                <span class="tab">ASP.NET</span>
+                <span class="tab">PHP</span>
+                <span class="tab">Front END</span>
+                <span class="tab">QA+BA</span>
+            </div>
+            <div class="tab_content">
+                <div class="tab_item">
+                    <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
+                    <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="tab_item">
+                    <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
+                    <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="tab_item">
+                    <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
+                    <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="tab_item">
+                    <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
+                    <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="tab_item">
+                    <div class="left_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci animi autem blanditiis dolores fuga, maiores nam natus nostrum quo saepe, sed suscipit tempora vero voluptatem? A, autem consequatur ea fuga illo labore. A, asperiores blanditiis consequatur culpa dolorum eos esse id iure laboriosam magni maiores nisi officiis omnis optio porro, praesentium quas rem soluta sunt temporibus totam vitae, voluptates.</div>
+                    <div class="right_colom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut debitis, exercitationem harum hic illo in inventore magni molestiae necessitatibus nemo neque nihil praesentium qui quia quis reiciendis sequi soluta tempore unde? A amet aperiam cum cumque fuga, iusto libero non, odit omnis porro quis saepe sapiente tenetur unde voluptate? Ab aliquid consequuntur esse iste natus possimus quo repellendus tempora.</div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+    <!-- slider -->
+    <section class="block_5" id="box4_a">
+        <div class="slider2">
+            <div class="slide"><img src="img/slide1.jpg"></div>
+            <div class="slide"><img src="img/slide2.jpg"></div>
+            <div class="slide"><img src="img/slide3.jpg"></div>
+        </div>
 
+    </section>
 
+    <section class="block_6" id="box5_a">
+        <div class="contact">
+            <h5>Хочешь в интернатуру?</h5>
+            <p class="conntact_p">Пиши нам!</p>
+            <div class="form_contact">
+                <form id="loginform" action="" method="post">
+                    <p>
+                        <input type="text" name="name" placeholder="ИМЯ"/>
+                    </p>
+                    <p>
+                        <input type="email" name="mail" placeholder="E-MAIL"/>
+                    </p>
+                    <p>
+                        <input type="tel" name="telephon" placeholder="НОМЕР ТЕЛЕФОНА" >
+                    </p>
+                    <p>
+                        <input class="form_bottom" type="submit" name="enter" value="Отправить" />
+                    </p>
+                </form>
+            </div>
+        </div>
+    </section>
+
+</div>
 
 <footer>
     <div class="left_footer">
@@ -193,6 +187,11 @@
         });
     });
 </script>
+
+
+
+
+
 
 
 
