--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
     <!-- slider bx -->
     <link href="js/jquery.bxslider.css" rel="stylesheet">
 
