--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <div id="main_a">
     <section class="block_2" >
-        <img src="img/meeting-coffee-laptops-1940x900_36390.jpg" alt="img in text">
+        <img src="img/2.jpg" alt="img in text">
         <p>
             BIONIC University в рамках развития концепции практического обучения запустил собственный проект по разратке програмного обеспечения - BU Dev Studio. Участники проекта работают над продуктом в команде под руководством опытных ти-лидов, таким образом, изучая на практике весь цыкл разработке проекта.
             <br>
