--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
-    <title>Like studion | WEB  Company</title>
+    <title>Bionic</title>
 </head>
 
 <body>
