--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
     </div>
 </footer>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="js/mafusail.js"></script>
 <script src="js/riss.js"></script>
 <script src="js/max.js."></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
 
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script type="text/javascript" src="js/validation/jquery.validate.min.js"></script>
@@ -186,7 +186,9 @@
             slideWidth: 1200,
             minSlides: 1,
             maxSlides: 1,
-            slideMargin: 0
+            slideMargin: 0,
+            auto: true,
+            autoControls: false
         });
     });
 </script>
