Slider autoplay  +sliderWidth 100%

--- a/index.html
+++ b/index.html
@@ -183,10 +183,11 @@
 <script>
     $(document).ready(function(){
         $('.slider2').bxSlider({
-            slideWidth: 1200,
+//            slideWidth: 1200,
             minSlides: 1,
             maxSlides: 1,
             slideMargin: 0,
+            loop: true,
             auto: true,
             autoControls: false
         });
