--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
     </div>
 </footer>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
 <script src="js/mafusail.js"></script>
 <script src="js/riss.js"></script>
 <script src="js/max.js."></script>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script type="text/javascript" src="js/validation/jquery.validate.min.js"></script>
@@ -190,13 +190,10 @@
 <script>
     $(document).ready(function(){
         $('.slider2').bxSlider({
-//            slideWidth: 1200,
+            slideWidth: 1200,
             minSlides: 1,
             maxSlides: 1,
-            slideMargin: 0,
-            loop: true,
-            auto: true,
-            autoControls: false
+            slideMargin: 0
         });
     });
 </script>
