designed the form (which occurs when not Correctly filling)

--- a/index.html
+++ b/index.html
@@ -136,23 +136,26 @@
     <section class="block_6" id="box5_a">
         <div class="contact">
             <h5>Хочешь в интернатуру?</h5>
-            <p class="conntact_p">Пиши нам!</p>
-            <div class="form_contact">
-                <form id="loginform" action="" method="post">
-                    <p>
-                        <input type="text" name="name" placeholder="ИМЯ"/>
-                    </p>
-                    <p>
-                        <input type="email" name="mail" placeholder="E-MAIL"/>
-                    </p>
-                    <p>
-                        <input type="tel" name="telephon" placeholder="НОМЕР ТЕЛЕФОНА" >
-                    </p>
-                    <p>
-                        <input class="form_bottom" type="submit" name="enter" value="Отправить" />
-                    </p>
-                </form>
-            </div>
+                <div class="adapt_form">
+                    <p class="contact_p">Пиши нам!</p>
+                    <div class="form_contact">
+                        <form id="loginform" action="" method="post">
+                            <p>
+                                <input type="text" name="name" placeholder="ИМЯ"/>
+                            </p>
+                            <p>
+                                <input type="email" name="mail" placeholder="E-MAIL"/>
+                            </p>
+                            <p>
+                                <input type="tel" name="telephon" placeholder="НОМЕР ТЕЛЕФОНА" >
+                            </p>
+                            <p>
+                                <input class="form_bottom" type="submit" name="enter" value="Отправить" />
+
+                            </p>
+                        </form>
+                    </div>
+                </div>
         </div>
     </section>
 
@@ -177,8 +180,6 @@
 <script src="js/mafusail.js"></script>
 <script src="js/riss.js"></script>
 <script src="js/max.js."></script>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script type="text/javascript" src="js/validation/jquery.validate.min.js"></script>
