--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </p>
     </div>
     <div class="right_footer">
-        <p>
+        <p class="cotial">
             Поделись с друзьями
         </p>
         <a href="https://www.facebook.com/BionicUniversity"><img src="img/facebook_button.png" alt="facebook"></a>
